--- a/index.html
+++ b/index.html
@@ -10,11 +10,36 @@
 </head>
 
 <body>
+    <div id="a">
+        <h2>A</h2>
+    </div>
+
+    <div id="b">
+        <h2>B</h2>
+    </div>
+
+    <div id="c">
+        <h2>C</h2>
+    </div>
 
     <div class="m-container js-container"></div>
     <div class="example">
         <button class="js-button">Click me</button>
     </div>
+
+    <div id="d">
+        <h2>D</h2>
+    </div>
+
+    <div id="e">
+        <h2>E</h2>
+    </div>
+
+    <div id="f">
+        <h2>F</h2>
+    </div>
+
+    <img src="/Файли з диска С/Downloads/P6hotos.jpg" alt="jkdjfk" id="my_photo" onclick="changesize()">
 
     <!-- test engine -->
     <script src="testengine/jasmine.js"></script>
